# crocheting

./: BezierCurve.022_curvedata.txt  Cap_curvedata.txt  Cargo.toml  DecreaseLeft_curvedata.txt  DecreaseRight_curvedata.txt  README.md
crocheting/: Cargo.toml  IncreaseLeft_curvedata.txt  IncreaseRight_curvedata.txt  SingleCrochet_curvedata.txt  TriangoloCambiaDirezione_curvedata.txt  TurnBack_curvedata.txt  TurnForward_curvedata.txt
crocheting/src/: crochet_consts.rs  errors.rs  geometry.rs  instructions.rs  lib.rs  mesh_viz.rs  nodes.rs  param_surface.rs
dati_grafici/beastie/: istruzioni.txt
dati_grafici/godot_meshviz/: blender_facedata.txt  blender_facedata_capunaman.txt  distance_between_rows.txt  distance_between_rows_capunaman.txt  facedata.txt  istruzioni.txt
dati_grafici/knitted_test_1/: blender_facedata.txt  blender_facedata_capunaman.txt  curve.mat  error_distribution_capunaman.mat  error_distribution_gismondi.mat  graph.dot  istruzioni.txt  istruzioni_capunaman.txt  skew_distribution_capunaman.mat  skew_distribution_gismondi.mat  spirale_target.mat  startrows.mat  vertici.mat
dati_grafici/metrics/: PietraCapunaman_edge_error.txt  PietraCapunaman_edge_error_course.txt  PietraCapunaman_edge_error_wale.txt  PietraCapunaman_skew.txt  PietraGismondi_edge_error.txt  PietraGismondi_edge_error_course.txt  PietraGismondi_edge_error_wale.txt  PietraGismondi_skew.txt  cilindrodeforme_capunaman_edge_error.txt  cilindrodeforme_capunaman_edge_error_course.txt  (+6 more)
src/: crochet_consts.rs  instructions.rs  main.rs  mesh_viz.rs  modelli.rs  nodes.rs
(+48 files in other folders)
