[package]
name = "crocheting"
version = "0.1.0"
edition = "2021"
authors = ["Massimo Gismondi"]
description = "A library to generate crocheting instructions from parametric surfaces"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30.1"
petgraph = "0.6.0"
rand = "0.8.4"
lazy_static = "1.4.0"
dyn-clone = "1.0.4"
# rayon = "1.5.1"